--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,19 @@
             <version>0.1.15</version>
         </dependency>
         
-       
+        <dependency>
+            <groupId>net.sourceforge.jfuzzylogic</groupId>
+            <artifactId>jFuzzyLogic</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        
+        <dependency>
+                <groupId>net.sourceforge.jfuzzylogic</groupId>
+                <artifactId>jFuzzyLogic</artifactId>
+                <scope>system</scope>
+                <version>1.2.1</version>
+                <systemPath>${basedir}\src\libs\jFuzzyLogic.jar</systemPath>
+        </dependency>
         
      
 
