--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,12 @@
             <artifactId>jFuzzyLogic</artifactId>
             <version>1.2.1</version>
         </dependency>
+        
+        
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+         <version>3.7</version>
+        </dependency>
     </dependencies>
 </project>
